--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,14 +3,18 @@
 @tailwind utilities;
 
 :root{
-    --prm : #27374D;
-    --sec : #526D82;
+    --prm : #212121;
+    --sec : #535353;
     --text : #9DB2BF;
     --text-h : #DDE6ED;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Ysabeau+SC:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+
+body{
+    background-color: #212121;
+}
 
 .font-sc{
     font-family: 'Ysabeau SC', sans-serif;
@@ -21,23 +25,26 @@
 }
 
 .nav-drawer{
-    @apply bg-[--prm] text-white w-[31vw] h-[100vh] fixed left-0 top-0 p-2 flex flex-col space-y-5
+    @apply bg-[--prm] text-white w-[30vw] h-[100vh] p-2 flex flex-col space-y-5
 }
 
 .login-form{
-    @apply w-[31vw] h-[100vh] bg-[--prm] flex  justify-center items-center
+    @apply w-[30vw] h-[100vh] bg-[--prm] flex  justify-center items-center
 }
 
+.message-space{
+    @apply w-[69vw] bg-[--prm] h-[100vh]  flex justify-center items-center overflow-hidden ;
+}
 .profile-pic{
     @apply w-[6vmin] h-[6vmin] rounded-[50%]
 }
 
 .contact-card{
-    @apply w-[100%] h-[100%] flex items-center p-1 space-x-3  border-[--sec] border-b-[1px] border-t-[1px] hover:bg-[--sec] hover:cursor-pointer
+    @apply w-[100%] h-[100%] flex items-center p-1 space-x-3  hover:bg-[--sec] hover:cursor-pointer
 }
 
 .input-field-antd{
-    @apply  text-[--text-h] placeholder:text-[--text] bg-transparent outline-none border-t-0 rounded-none w-[15vmax] h-[5vmin] border-l-0 border-r-0 focus:outline-none
+    @apply  text-[--text-h] text-sm placeholder:text-[--text] bg-transparent outline-none border-t-0 rounded-none w-[100%] h-[5vmin] border-l-0 border-r-0 focus:outline-none py-2
 }
 
 #app-bg{
@@ -46,4 +53,13 @@
 
 ::-webkit-scrollbar{
     display: none;
+}
+
+@media only screen and (max-width:800px){
+    .login-form,.nav-drawer,.message-space{
+        width: 100vw;
+    }
+    .hide{
+        display: none;
+    }
 }
