--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,64 +2,71 @@
 @tailwind components;
 @tailwind utilities;
 
-:root{
-    --prm : #212121;
-    --sec : #535353;
-    --text : #9DB2BF;
-    --text-h : #DDE6ED;
+:root {
+  --prm: #212121;
+  --sec: #535353;
+  --text: #9db2bf;
+  --text-h: #dde6ed;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Ysabeau+SC:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ysabeau+SC:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
 
-body{
-    background-color: #212121;
+
+  
+
+body {
+  background-color: #212121;
 }
 
-.font-sc{
-    font-family: 'Ysabeau SC', sans-serif;
+.font-sc {
+  font-family: "Ysabeau SC", sans-serif;
 }
 
-.font-ubuntu{
-    font-family: 'Ubuntu', sans-serif;
+.font-ubuntu {
+  font-family: "Ubuntu", sans-serif;
 }
 
-.nav-drawer{
-    @apply bg-[--prm] text-white w-[30vw] h-[100vh] p-2 flex flex-col space-y-5
+.nav-drawer {
+  @apply bg-[--prm] text-white w-[30vw] h-[100vh] p-2 flex flex-col space-y-5  ;
 }
 
-.login-form{
-    @apply w-[30vw] h-[100vh] bg-[--prm] flex  justify-center items-center
+.login-form {
+  @apply w-[30vw] h-[100vh] bg-[--prm] flex  justify-center items-center;
 }
 
-.message-space{
-    @apply w-[69vw] bg-[--prm] h-[100vh]  flex justify-center items-center overflow-hidden ;
+.message-space {
+  @apply w-[69vw] bg-[--prm] h-[100vh]  flex justify-center items-center overflow-hidden;
 }
-.profile-pic{
-    @apply w-[6vmin] h-[6vmin] rounded-[50%]
-}
-
-.contact-card{
-    @apply w-[100%] h-[100%] flex items-center p-1 space-x-3  hover:bg-[--sec] hover:cursor-pointer
+.profile-pic {
+  @apply w-[6vmin] h-[6vmin] rounded-[50%];
 }
 
-.input-field-antd{
-    @apply  text-[--text-h] text-sm placeholder:text-[--text] bg-transparent outline-none border-t-0 rounded-none w-[100%] h-[5vmin] border-l-0 border-r-0 focus:outline-none py-2
+.contact-card {
+  @apply w-[100%] h-[100%] flex items-center p-1 space-x-3  hover:bg-[--sec] hover:cursor-pointer;
 }
 
-#app-bg{
-    background-image: url('./assets/app-bg.jpg');
+.input-field-antd {
+  @apply text-[--text-h] text-sm placeholder:text-[--text] bg-transparent outline-none border-t-0 rounded-none w-[100%] h-[5vmin] border-l-0 border-r-0 focus:outline-none py-2 animate-slideright ;
 }
 
-::-webkit-scrollbar{
+#app-bg {
+  background-image: url("./assets/app-bg.jpg");
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+@media only screen and (max-width: 800px) {
+  .login-form,
+  .nav-drawer,
+  .message-space {
+    width: 100vw;
+  }
+  .hide {
     display: none;
+  }
 }
 
-@media only screen and (max-width:800px){
-    .login-form,.nav-drawer,.message-space{
-        width: 100vw;
-    }
-    .hide{
-        display: none;
-    }
-}
+
